# DesktopNotes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-release-log.txt  package-log.txt
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
docs/superpowers/plans/: 2026-06-05-stickynotes-plan.md  part1-m0-m2.md  part2-m3-m4.md  part3-m5-m6.md
docs/superpowers/specs/: 2026-06-05-stickynotes-design.md
scripts/: package-portable.ps1  screenshot-win.ps1  screenshot.ps1
src/app/: CMakeLists.txt  main.cpp
src/app/include/app/: app_context.h  app_entry.h  reminder_service.h  runtime.h
src/app/src/: app_context.cpp  app_entry.cpp  reminder_service.cpp  runtime.cpp
src/core/: CMakeLists.txt
src/core/include/core/: category.h  file_notestore.h  inotestore.h  markdown_codec.h  note.h  settings.h
src/core/src/: file_notestore.cpp  markdown_codec.cpp  note_serialize.cpp  settings.cpp
src/platform/: CMakeLists.txt
src/platform/include/platform/: fake_clock.h  filesystem_qt.h  iclock.h  ifilesystem.h  ihotkey.h  inotifier.h  itrayicon.h  system_clock.h
src/platform/include/platform/win/: hotkey_win.h  notifier_win.h  trayicon_win.h
src/platform/win/: filesystem_qt.cpp  hotkey_win.cpp  notifier_win.cpp  system_clock.cpp  trayicon_win.cpp
src/ui/: CMakeLists.txt
src/ui/include/ui/: hotkey_edit.h  mainwindow.h  note_editor.h  settings_dialog.h  stickywindow.h
src/ui/src/: hotkey_edit.cpp  mainwindow.cpp  note_editor.cpp  settings_dialog.cpp  stickywindow.cpp
tests/: CMakeLists.txt  smoke_test.cpp
tests/app/: CMakeLists.txt  reminder_service_test.cpp
tests/core/: CMakeLists.txt  fake_filesystem.h  file_notestore_test.cpp  markdown_codec_test.cpp  note_serialize_test.cpp  settings_test.cpp
tests/platform/: CMakeLists.txt  clock_test.cpp  filesystem_qt_test.cpp  hotkey_test.cpp  ihotkey_parsespec_test.cpp  mock_clock.h  mocks.h  notifier_test.cpp  trayicon_test.cpp
tests/ui/: CMakeLists.txt  hotkey_edit_test.cpp
